--- a/digital/iconography.html
+++ b/digital/iconography.html
@@ -31,145 +31,129 @@
                         </p>
                     </section>
                     <section>
-                        <div class="row text-center">
-                            <div class="col-12 mb-30">
-                                <div class="row">
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-arrow-left"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-arrow-right"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-cancel"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-check"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-up"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-down"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-left"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-right"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-plus"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-minus"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-caret-down"></i>
-                                    </div>
-                                </div>
+                        <div class="row row-icons mb-30 text-center">
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-arrow-left"></i>
                             </div>
-                            <div class="col-12 mb-30">
-                                <div class="row">
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-user-outlined"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-user-filled"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-bookmark-outlined"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-bookmark-filled"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-exclamation-circle"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-exclamation-solid"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-eyeon"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-eyeoff"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-mail"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-mailing"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-question-circle"></i>
-                                    </div>
-                                </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-arrow-right"></i>
                             </div>
-                            <div class="col-12 mb-30">
-                                <div class="row">
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-search"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-fontsize"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-download"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-note"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-zoom"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-play-solid"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-pause-solid"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-volume"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-check-solid"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-pen"></i>
-                                    </div>
-                                    <div class="col py-5"></div>
-                                </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-cancel"></i>
                             </div>
-                            <div class="col-12 mb-30">
-                                <div class="row">
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-facebook"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-line"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-twitter"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-apple"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-instagram"></i>
-                                    </div>
-                                    <div class="col py-5">
-                                        <i class="h2 my-0 icon icon-rss"></i>
-                                    </div>
-                                    <div class="col py-5"></div>
-                                    <div class="col py-5"></div>
-                                    <div class="col py-5"></div>
-                                    <div class="col py-5"></div>
-                                    <div class="col py-5"></div>
-                                </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-check"></i>
                             </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-up"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-down"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-left"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-right"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-plus"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-minus"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-caret-down"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-user-outlined"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-user-filled"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-bookmark-outlined"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-bookmark-filled"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-exclamation-circle"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-exclamation-solid"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-eyeon"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-eyeoff"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-mail"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-mailing"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-question-circle"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-search"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-fontsize"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-download"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-note"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-zoom"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-play-solid"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-pause-solid"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-volume"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-check-solid"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-pen"></i>
+                            </div>
+                            <div class="col-auto py-5 d-md-block d-none"></div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-facebook"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-line"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-twitter"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-apple"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-instagram"></i>
+                            </div>
+                            <div class="col-auto py-5">
+                                <i class="h2 my-0 icon icon-rss"></i>
+                            </div>
+                            <div class="col-auto py-5 d-md-block d-none"></div>
+                            <div class="col-auto py-5 d-md-block d-none"></div>
+                            <div class="col-auto py-5 d-md-block d-none"></div>
+                            <div class="col-auto py-5 d-md-block d-none"></div>
+                            <div class="col-auto py-5 d-md-block d-none"></div>
                         </div>
-                        <a href="#!" class="btn btn--outlined w-100 px-30 mt-10 mb-30 text-left">
+                        <a download href="../download/icons.zip" class="btn btn--outlined w-100 px-30 mt-10 mb-30 text-left">
                             <i class="icon icon-download mr-10"></i> icon.zip
                         </a>
                     </section>
