--- a/digital/typography.html
+++ b/digital/typography.html
@@ -90,7 +90,7 @@
                                     共同願景：希望透過網路無遠弗屆的特性，把苗栗在地的農產品推廣出去。
                                 </div>
                             </div>
-                            <a href="#!" class="btn btn--outlined w-100 px-30 mt-10 mb-30 text-left">
+                            <a download href="../download/Noto_Sans_TC.zip" class="btn btn--outlined w-100 px-30 mt-10 mb-30 text-left">
                                 <i class="icon icon-download mr-10"></i> Noto Sans TC.zip
                             </a>
                         </div>
@@ -111,7 +111,7 @@
                                     外商挖台積、台積挖傳產　最狂「人才食物鏈」，啟動2022全台大加薪！
                                 </div>
                             </div>
-                            <a href="#!" class="btn btn--outlined w-100 px-30 mt-10 mb-30 text-left">
+                            <a download href="../download/Noto_Serif_TC.zip" class="btn btn--outlined w-100 px-30 mt-10 mb-30 text-left">
                                 <i class="icon icon-download mr-10"></i> Noto Serif TC.zip
                             </a>
                         </div>
@@ -176,7 +176,7 @@
                                     Everyone is working remotely.
                                 </div>
                             </div>
-                            <a href="#!" class="btn btn--outlined w-100 px-30 mt-10 mb-30 text-left">
+                            <a download href="../download/Roboto.zip" class="btn btn--outlined w-100 px-30 mt-10 mb-30 text-left">
                                 <i class="icon icon-download mr-10"></i> Roboto.zip
                             </a>
                         </div>
