--- a/graphic/usage.html
+++ b/graphic/usage.html
@@ -44,7 +44,7 @@
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="../system/graphic/usage/1-1-ig-topic-post.jpg" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <div class="row my-40">
@@ -59,7 +59,7 @@
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="../system/graphic/usage/1-2-ig-topic-story.jpg" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <div class="row my-40">
@@ -73,21 +73,21 @@
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="../system/graphic/usage/1-3-ig-digest-post.jpg" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <div class="row my-40">
                             <div class="col">
                                 <div class="h3 mt-0 mb-10">4. 書摘圖卡（列點類型）</div>
                                 <p class="mt-0">
-                                    尺寸 ：1080X1320（ 可視範圍 1080x1080 置中 ）<br/>
+                                    尺寸 ：1080X1350（ 可視範圍 1080x1080 置中 ）<br/>
                                     底色 ：#EFEFEF<br/>
                                     標題上 ：Noto Sans CJK TC，Regular，60pt<br/>
                                     標題下 ：Noto Sans CJK TC，Regular，48pt
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="../system/graphic/usage/1-4-ig-digest-post.jpg" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <div class="row my-40">
@@ -101,20 +101,20 @@
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="../system/graphic/usage/1-5-ig-digest-story.jpg" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <div class="row my-40">
                             <div class="col">
                                 <div class="h3 mt-0 mb-10">6. 金句圖卡</div>
                                 <p class="mt-0">
-                                    尺寸 ：1080X1080<br/>
+                                    尺寸 ：1040X1040<br/>
                                     金句 ： 微軟正黑 ，Blod，48pt<br/>
                                     來源 ： 微軟正黑 ，Regular，32pt
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="../system/graphic/usage/1-6-ig-quote.jpg" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <div class="row my-40">
@@ -129,7 +129,7 @@
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="../system/graphic/usage/1-7-ig-quote-story.jpg" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <div class="row my-40">
@@ -137,12 +137,12 @@
                                 <div class="h3 mt-0 mb-10">8. 每週大事圖卡</div>
                                 <p class="mt-0">
                                     尺寸：1080X1080<br/>
-                                    大標：單行8字內，至多兩行<br/>
-                                    內文：單行22字內，至多四行
+                                    大標：單行 8 字內，至多兩行<br/>
+                                    內文：單行 22 字內，至多六行
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="../system/graphic/usage/1-8-ig-daily-post.jpg" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <hr class="my-20">
@@ -160,7 +160,7 @@
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="https://dummyimage.com/1040x1040/fff/aaa" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <div class="row my-40">
@@ -173,7 +173,7 @@
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="../system/graphic/usage/2-2-line-podcast-post.jpg" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <div class="row my-40">
@@ -186,7 +186,7 @@
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="../system/graphic/usage/2-3-line-podcast-post.jpg" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <div class="row my-40">
@@ -199,7 +199,7 @@
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="https://dummyimage.com/1040x1040/fff/aaa" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <div class="row my-40">
@@ -212,7 +212,7 @@
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="https://dummyimage.com/1040x1040/fff/aaa" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <div class="row my-40">
@@ -225,7 +225,7 @@
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="https://dummyimage.com/1040x1040/fff/aaa" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <hr class="my-20">
@@ -234,11 +234,15 @@
                             <div class="col">
                                 <div class="h3 mt-0 mb-10">1. 經濟學人電子報聽天下首圖</div>
                                 <p class="mt-0">
-                                    尺寸 ：1600X1072
+                                    尺寸 ：1600X1072<br /><br/>
+                                    單行 15 字以內 ， 至多兩行<br/>
+                                    需在語意適當處斷行 ， 勿因句子過長斷行<br/>
+                                    多字需刪至規範內 ， 勿自行縮放字體大小
+
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="../system/graphic/usage/3-1-economist.jpg" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <hr class="my-20">
@@ -254,7 +258,7 @@
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="../system/graphic/usage_sample_line.jpg" width="240" alt="">
+                                <img src="https://dummyimage.com/1040x1040/fff/aaa" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                     </section>
