--- a/graphic/usage.html
+++ b/graphic/usage.html
@@ -160,7 +160,7 @@
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="https://dummyimage.com/1040x1040/fff/aaa" class="border-gray-100" width="240" alt="">
+                                <img src="../system/graphic/usage/2-1-line-popular.jpg" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <div class="row my-40">
@@ -199,7 +199,7 @@
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="https://dummyimage.com/1040x1040/fff/aaa" class="border-gray-100" width="240" alt="">
+                                <img src="../system/graphic/usage/2-4-line-eng-post.jpg" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <div class="row my-40">
@@ -212,7 +212,7 @@
                                 </p>
                             </div>
                             <div class="col-auto">
-                                <img src="https://dummyimage.com/1040x1040/fff/aaa" class="border-gray-100" width="240" alt="">
+                                <img src="../system/graphic/usage/2-5-line-digest-post.jpg" class="border-gray-100" width="240" alt="">
                             </div>
                         </div>
                         <div class="row my-40">
