add: channel, hover, download

--- a/brand/digital-application.html
+++ b/brand/digital-application.html
@@ -16,6 +16,9 @@
             <a class="logo" href="https://www.cw.com.tw/">
                 <img src="../assets/images/common/logo.svg" alt="天下雜誌紅底白字版 LOGO">
             </a>
+            <a class="channel" href="../index.html">
+                設計系統
+            </a>
         </div>
     </header>
     <main>
@@ -105,7 +108,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mb-40">
+                        <!-- <div class="mb-40">
                             <h2 class="mt-0 mb-5">特色頻道、活動</h2>
                             <h4 class="h3 mt-0 mb-10">天下每日報</h4>
                             <img src="../system/application/edm-daily.jpg" class="mb-40" alt="">
@@ -117,7 +120,7 @@
                             <img src="../system/application/edm-economist.png" class="mb-40" alt="">
                             <h4 class="h3 mt-0 mb-10">天下行銷電子報</h4>
                             <img src="../system/application/edm-mkt.png" alt="">
-                        </div>
+                        </div> -->
                     </section>
                 </article>
             </div>
