--- a/digital/cookie.html
+++ b/digital/cookie.html
@@ -18,13 +18,16 @@
             <a class="logo" href="https://www.cw.com.tw/">
                 <img src="../assets/images/common/logo.svg" alt="天下雜誌紅底白字版 LOGO">
             </a>
+            <a class="channel" href="../index.html">
+                設計系統
+            </a>
         </div>
     </header>
     <main>
         <div class="container">
             <div class="row">
                 <aside class="col-md-auto"></aside>
-                <article class="col-md pl-md-0">
+                <article class="col-md">
                     <section>
                         <h1 class="mt-0 mb-10">Cookies</h1>
                         <p>
