--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <a class="logo" href="https://www.cw.com.tw/">
                 <img src="assets/images/common/logo.svg" alt="天下雜誌紅底白字版 LOGO">
             </a>
+            <a class="channel" href="index.html">
+                設計系統
+            </a>
         </div>
     </header>
     <main>
@@ -31,6 +34,7 @@
                         <div class="col-md-6 my-20">
                             <a href="brand/principle.html" class="d-block bg-gray-100 py-20">
                                 <img src="system/landing/principle.svg" class="mx-auto my-30" alt="">
+                                <img src="system/landing/principle-hover.svg" class="hover mx-auto my-30" alt="">
                                 <span class="item-title h4 d-flex">
                                     <b>
                                         設計原則
@@ -42,6 +46,7 @@
                         <div class="col-md-6 my-20">
                             <a href="brand/specification.html" class="d-block bg-gray-100 py-20">
                                 <img src="system/landing/logo.svg" class="mx-auto my-30" alt="">
+                                <img src="system/landing/logo-hover.svg" class="hover mx-auto my-30" alt="">
                                 <span class="item-title h4 d-flex">
                                     <b>
                                         LOGO CI
@@ -53,6 +58,7 @@
                         <div class="col-md-6 my-20">
                             <a href="graphic/color.html" class="d-block bg-gray-100 py-20">
                                 <img src="system/landing/graphic.svg" class="mx-auto my-30" alt="">
+                                <img src="system/landing/graphic-hover.svg" class="hover mx-auto my-30" alt="">
                                 <span class="item-title h4 d-flex">
                                     <b>
                                         平面產品
@@ -64,6 +70,7 @@
                         <div class="col-md-6 my-20">
                             <a href="digital/color.html" class="d-block bg-gray-100 py-20">
                                 <img src="system/landing/digital.svg" class="mx-auto my-30" alt="">
+                                <img src="system/landing/digital-hover.svg" class="hover mx-auto my-30" alt="">
                                 <span class="item-title h4 d-flex">
                                     <b>
                                         數位產品
@@ -75,6 +82,7 @@
                         <div class="col-md-6 my-20">
                             <a href="download.html" class="d-block bg-gray-100 py-20">
                                 <img src="system/landing/download.svg" class="mx-auto my-30" alt="">
+                                <img src="system/landing/download-hover.svg" class="hover mx-auto my-30" alt="">
                                 <span class="item-title h4 d-flex">
                                     <b>
                                         資源下載
