--- a/graphic/color.html
+++ b/graphic/color.html
@@ -16,6 +16,9 @@
             <a class="logo" href="https://www.cw.com.tw/">
                 <img src="../assets/images/common/logo.svg" alt="天下雜誌紅底白字版 LOGO">
             </a>
+            <a class="channel" href="../index.html">
+                設計系統
+            </a>
         </div>
     </header>
     <main>
