--- a/digital/accordion.html
+++ b/digital/accordion.html
@@ -19,7 +19,7 @@
                 <img src="../assets/images/common/logo.svg" alt="天下雜誌紅底白字版 LOGO">
             </a>
             <a class="channel" href="../index.html">
-                設計系統
+                天下設計系統
             </a>
         </div>
     </header>
