--- a/digital/radio-button.html
+++ b/digital/radio-button.html
@@ -79,7 +79,7 @@
                                     <hr class="my-40">
                                     <h2 class="mt-0 mb-10">Types</h2>
                                     <p class="mt-10 mb-20">
-                                        Checkboxes 有三種狀態
+                                        Radio Buttons 有三種狀態
                                     </p>
                                     <div class="table--scroll text-center">
                                         <table class="table-select">
