--- a/digital/search-field.html
+++ b/digital/search-field.html
@@ -57,7 +57,7 @@
                                     <hr class="my-40">
                                     <h2 class="mt-0 mb-10">Types</h2>
                                     <p class="mt-10 mb-20">
-                                        Buttons 有三種尺寸及三種樣式。
+                                        Buttons 有兩種尺寸及兩種樣式。
                                     </p>
                                     <div class="table--scroll">
                                         <table class="table-btn my-20 text-center">
